@@ -4,6 +4,9 @@
 	whimsical example pulled from a punch-drunk email I sent out late
 	one night.
 	(Transferring Files): document some of the other parameters
+	(SVNPoller): rename svnpoller.SvnSource to SVNPoller
+	* buildbot/test/test_svnpoller.py: same
+	* buildbot/changes/svnpoller.py (SVNPoller): same
 
 2006-11-26  Brian Warner  <warner@lothar.com>
 
